# quantlab

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: tests.yml
config/: assets.yaml  backtest_settings.yaml  portfolios.yaml  risk_limits.yaml  strategies.yaml
docs/: backtest_assumptions.md  dashboard_performance.md  github_about.md  input_schema.md  methodology.md  roadmap.md  safety_boundary.md
examples/sample_configs/: portfolio_ai_tilt.yaml  portfolio_balanced_6040.yaml  portfolio_growth_balanced.yaml  strategy_buy_and_hold.yaml  strategy_drawdown_buy.yaml  strategy_periodic_rebalance.yaml  strategy_trend_filter.yaml
examples/sample_data/: prices_sample.csv
examples/sample_outputs/: backtest_growth_balanced_periodic_rebalance.json  backtest_result.json  comparison_growth_balanced.json  paper_account_state.json  strategy_comparison.json
scripts/: run_demo.py  verify_line_endings.py
src/quantlab/: __init__.py  main.py  (+2 more)
tests/: conftest.py  test_advanced_metrics.py  test_backtest_engine.py  test_backtest_performance.py  test_benchmark_metrics.py  test_cli.py  test_config_validation.py  test_dashboard_app_static.py  test_dashboard_helpers.py  test_data_loader.py  test_data_validator.py  test_execution_invariants.py  test_execution_lag.py  test_html_writer.py  test_markdown_escaping.py  test_no_broker_execution.py  test_no_lookahead.py  test_order_events.py  test_paper_account.py  test_paper_boundary.py  test_portfolio.py  test_rebalance_removed_assets.py  test_rebalancing.py  test_report_rendering.py  test_report_safety.py  test_risk_limits.py  test_risk_metrics.py  test_strategies.py  test_transaction_costs.py
(+47 files in other folders)
