[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "Local-first portfolio backtesting and paper trading research system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=1.10",
  "PyYAML>=6",
  "pandas>=2",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "Jinja2>=3",
  "markdown>=3",
  "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
