[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.2.0"
description = "Local-first portfolio backtesting and paper trading research system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=1.10",
  "PyYAML>=6",
  "pandas>=2",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "Jinja2>=3",
  "markdown>=3",
  "streamlit>=1.58",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
strict = false
